enable AOT Cache (#1333)